# lockstep

./: .dev.vars.example  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  LICENSE-GRANT.md  README.md  go.mod  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
.github/workflows/: ci.yml  ue-plugin-release.yml
dashboard/: api.js  assemble.mjs  ds-bundle.js  gen-icons.mjs  index.html  source.dc.html  support.js
dashboard/lockstep/: styles.css
desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: git.rs  lib.rs  main.rs  oauth.rs  secret.rs  store.rs
docs/: architecture.md  auth.md  billing-polar.md  dashboard-wiring.md  design-prompt-desktop.md  local-dev.md
examples/: .gitattributes  .lfsconfig
marketing/: build.mjs  docs.html  index.html  source.dc.html
migrations/: 0001_init.sql  0002_orgs.sql  0003_events.sql  0004_billing.sql
plugin/LockstepSourceControl/: LockstepSourceControl.uplugin  README.md
plugin/packaging/: INSTALL-source.txt  INSTALL.txt  package-plugin.ps1  package-source.ps1
scripts/: seed-local.sql
server/: main.go
server/lfs/: batch.go  batch_test.go
server/locks/: api.go  api_test.go  locks.go
server/storage/: mem.go  s3.go  storage.go
src/: index.ts
src/lib/: access.ts  auth.ts  crypto.ts  (+6 more)
test/: crypto.test.ts  env.d.ts  locks.test.ts  orgs.test.ts
(+58 files in other folders)
