[package]
name = "lockstep-desktop"
version = "0.1.0"
description = "Lockstep desktop — git-based source control with Perforce-grade locking"
authors = ["Lockstep"]
edition = "2021"
rust-version = "1.77"

[lib]
# The library name the generated bindings/mobile entrypoint expects.
name = "lockstep_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Cross-platform OS credential store: Windows Credential Manager, macOS Keychain,
# Linux Secret Service. This is where the Personal Access Token lives at rest.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
# Tiny blocking loopback HTTP listener for the OAuth PAT hand-off.
tiny_http = "0.12"
# Random state/nonce for the OAuth flow.
getrandom = "0.2"

[features]
# This feature is used for production builds or when a dev server is not specified,
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
